examples/wasm/taking-bartholo/wasm-spin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasm-spin-bart
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wasm-spin-bart
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wasm-spin-bart
    spec:
      containers:
      - image: ghcr.io/kingdonb/taking-bartholo:test
        imagePullPolicy: Always
        name: spin-hello
        ports:
        - containerPort: 80
          name: http-web-svc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      # nodeSelector:
      #   kwasm.sh/kwasm-provisioned: msigaming
