examples/wasm/taking-bartholo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wasm-spin-bart
  namespace: default
spec:
  selector:
    app: wasm-spin-bart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
